<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_c1"
            android:title="" />

        <item
            android:id="@+id/nav_c3"
            android:title="" />

        <item
            android:id="@+id/logoutId"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="Logout" />

    </group>

</menu>